<resources>
    <string name="infoTextView"></string>
    <string name="app_name">Calculator</string>
    <string name="mc">MC</string>
    <string name="m_positive">M+</string>
    <string name="m_negative">M-</string>
    <string name="mr">MR</string>
    <string name="clear">C</string>
    <string name="positive_nagative">+-</string>
    <string name="divide">/</string>
    <string name="multiply">*</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="minus">-</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="positive">+</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="equal">=</string>
    <string name="zero">0</string>
    <string name="decimal">.</string>
</resources>
