<?xml version="1.0" encoding="utf-8"?>
<layout>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Calculator">

    <TableLayout
        android:id="@+id/display"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:stretchColumns="*"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="59dp">

        <TextView
            android:id="@+id/memoryText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:paddingRight="5dp"
            android:text="MEMORY : 0"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/infoTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end|bottom"
            android:textSize="60sp" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="117dp"
            android:enabled="false"
            android:gravity="end|bottom"
            android:lines="2"
            android:maxLines="2"
            android:text="0"
            android:textSize="50sp" />
    </TableLayout>


    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="bottom"
        android:stretchColumns="*"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="59dp">


        <!--first row of the table-->
        <TableRow
            android:id="@+id/first_row"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/mc"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorMemory"
                android:textColor="@color/colorText"
                android:text="@string/mc"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="7dp"
                tools:layout_editor_absoluteY="0dp" />

            <Button
                android:id="@+id/m_positive"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorText"
                android:background="@color/colorMemory"
                android:text="@string/m_positive"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="7dp"
                tools:layout_editor_absoluteY="0dp" />

            <Button
                android:id="@+id/m_negative"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorText"
                android:background="@color/colorMemory"
                android:text="@string/m_negative"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="7dp"
                tools:layout_editor_absoluteY="0dp" />

            <Button
                android:id="@+id/mr"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorText"
                android:background="@color/colorMemory"
                android:text="@string/mr"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="7dp"
                tools:layout_editor_absoluteY="0dp" />

        </TableRow>

        <TableRow
            android:id="@+id/second_row"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--android:layout_span="2"-->
            <Button
                android:id="@+id/clear"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:textColor="@color/colorText"
                android:text="@string/clear"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="7dp"
                tools:layout_editor_absoluteY="0dp" />


            <Button
                android:id="@+id/positive_negative"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/positive_nagative"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="7dp"
                tools:layout_editor_absoluteY="0dp" />

            <Button
                android:id="@+id/divide"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/divide"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="7dp"
                tools:layout_editor_absoluteY="0dp" />

            <Button
                android:id="@+id/multiply"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/multiply"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="7dp"
                tools:layout_editor_absoluteY="0dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/seven"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seven"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="7dp"
                tools:layout_editor_absoluteY="0dp" />


            <Button
                android:id="@+id/eight"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eight"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="7dp"
                tools:layout_editor_absoluteY="0dp" />

            <Button
                android:id="@+id/nine"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nine"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="7dp"
                tools:layout_editor_absoluteY="0dp" />

            <Button
                android:id="@+id/minus"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minus"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="7dp"
                tools:layout_editor_absoluteY="0dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/four"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/four"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="7dp"
                tools:layout_editor_absoluteY="0dp" />


            <Button
                android:id="@+id/five"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/five"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="7dp"
                tools:layout_editor_absoluteY="0dp" />

            <Button
                android:id="@+id/six"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/six"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="7dp"
                tools:layout_editor_absoluteY="0dp" />

            <Button
                android:id="@+id/add"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/positive"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="7dp"
                tools:layout_editor_absoluteY="0dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/one"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="7dp"
                tools:layout_editor_absoluteY="0dp" />


            <Button
                android:id="@+id/two"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/two"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="7dp"
                tools:layout_editor_absoluteY="0dp" />

            <Button
                android:id="@+id/three"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:text="@string/three"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="7dp"
                tools:layout_editor_absoluteY="0dp" />

            <Button
                android:id="@+id/decimal"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/decimal"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="7dp"
                tools:layout_editor_absoluteY="0dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/zero"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="7dp"
                tools:layout_editor_absoluteY="0dp" />


            <Button
                android:id="@+id/equal"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="3"
                android:background="@color/colorMemory"
                android:textColor="@color/colorText"
                android:text="@string/equal"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="7dp"
                tools:layout_editor_absoluteY="0dp" />

        </TableRow>
    </TableLayout>



</RelativeLayout>
</layout>